finish section 'description'

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
 <body>
 	<main>
 		@@include('html/home/intro.html',{})
+		@@include('html/home/description.html',{})
 	</main>
 	@@include('html/footer.html',{})
 </body>
