--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
 	<main>
 		@@include('html/home/intro.html',{})
 		@@include('html/home/description.html',{})
+		@@include('html/home/selection.html',{})
 	</main>
 	@@include('html/footer.html',{})
 </body>
