finish section brend

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
 		@@include('html/home/intro.html',{})
 		@@include('html/home/description.html',{})
 		@@include('html/home/selection.html',{})
+		@@include('html/home/brend.html',{})
+
 	</main>
 	@@include('html/footer.html',{})
 </body>
