finish home (not drawer menu)

--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -1,1 +1,39 @@
-<footer></footer>
+<footer class="footer">
+	<div class="container">
+		<div class="footer__border">
+			<a class="footer__logo" href="#">
+				<svg>
+					<use href="@img/sprite.svg#logo"></use>
+				</svg>
+			</a>
+
+			<div class="footer__contact">
+				<h3 class="footer__title">Контакты</h3>
+				<ul class="footer__contact-list">
+					<li><a href="#">+7 (812) 123-45-67</a></li>
+					<li><a href="#">+7 (911) 123-45-67</a></li>
+					<li><a href="#">Новоостровский проспект, дом 36 лит. С</a></li>
+				</ul>
+			</div>
+
+			<div class="footer__schedule">
+				<h3 class="footer__title">Режим работы</h3>
+				<ul class="footer__schedule-list">
+					<li>C 10:00 до 21:00 (Пн-Пт)</li>
+					<li>С 11:00 до 20:00 (Сб-Вс)</li>
+				</ul>
+			</div>
+
+			<div class="footer__social">
+				<h3 class="footer__title">Мы в Instagram</h3>
+				<a href="#" class="footer__social-inst-logo">
+					<svg>
+						<use href="@img/sprite.svg#static--socials--instagram-logo"></use>
+					</svg>
+				</a>
+
+			</div>
+		</div>
+	</div>
+	<p class="footer__copyright">Copyright © 2017 - 2022</p>
+</footer>
