--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
 		@@include('html/home/description.html',{})
 		@@include('html/home/selection.html',{})
 		@@include('html/home/brend.html',{})
+		@@include('html/home/project.html',{})
 
 	</main>
 	@@include('html/footer.html',{})
