start team page

--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -1,37 +1,34 @@
 <footer class="footer">
 	<div class="container">
 		<div class="footer__border">
-			<a class="footer__logo" href="#">
-				<svg>
-					<use href="@img/sprite.svg#logo"></use>
-				</svg>
-			</a>
+			<svg class="footer__logo">
+				<use href="@img/sprite.svg#logo"></use>
+			</svg>
 
-			<div class="footer__contact">
-				<h3 class="footer__title">Контакты</h3>
-				<ul class="footer__contact-list">
+			<div class="footer__contact contact">
+				<h3 class="contact__title">Контакты</h3>
+				<ul class="contact__list">
 					<li><a href="#">+7 (812) 123-45-67</a></li>
 					<li><a href="#">+7 (911) 123-45-67</a></li>
 					<li><a href="#">Новоостровский проспект, дом 36 лит. С</a></li>
 				</ul>
 			</div>
 
-			<div class="footer__schedule">
-				<h3 class="footer__title">Режим работы</h3>
-				<ul class="footer__schedule-list">
+			<div class="footer__schedule contact">
+				<h3 class="contact__title">Режим работы</h3>
+				<ul class="contact__list">
 					<li>C 10:00 до 21:00 (Пн-Пт)</li>
 					<li>С 11:00 до 20:00 (Сб-Вс)</li>
 				</ul>
 			</div>
 
-			<div class="footer__social">
-				<h3 class="footer__title">Мы в Instagram</h3>
+			<div class="footer__social contact">
+				<h3 class="contact__title">Мы в Instagram</h3>
 				<a href="#" class="footer__social-inst-logo">
 					<svg>
 						<use href="@img/sprite.svg#static--socials--instagram-logo"></use>
 					</svg>
 				</a>
-
 			</div>
 		</div>
 	</div>
