--- a/src/html/header.html
+++ b/src/html/header.html
@@ -8,9 +8,9 @@
 
 		<nav class="header__nav nav">
 			<ul>
-				<li><a href="#" class="__active">Главная</a></li>
-				<li><a href="#">Мастера</a></li>
-				<li><a href="#">Косметика</a></li>
+				<li><a id="page-1" href="/">Главная</a></li>
+				<li><a id="page-2" href="/team.html">Мастера</a></li>
+				<li><a id="page-3" href="#">Косметика</a></li>
 			</ul>
 		</nav>
 
@@ -28,7 +28,7 @@
 			</ul>
 		</nav>
 
-		<a href="#" class="header__bugrer-wrapper">
+		<a id="menu-open" href="#" class="header__bugrer-wrapper">
 			<svg class="header__burger">
 				<use href="@img/sprite.svg#burger"></use>
 			</svg>
