--- a/src/html/home/intro.html
+++ b/src/html/home/intro.html
@@ -1,7 +1,9 @@
-<section class="intro">
+<section class="intro __drawer">
 	<div class="intro__container container">
 		@@include('../header.html',{})
 		<h1 class="intro__title">Салон красоты <br> «Delote-Beauty» <br> на Крестовском</h1>
 		<p class="intro__footer">Прокрутите вниз</p>
 	</div>
+
+	@@include('../components/menu.html',{})
 </section>
