--- a/src/html/header.html
+++ b/src/html/header.html
@@ -14,7 +14,7 @@
 			</ul>
 		</nav>
 
-		<a href="#" class="header__logo">
+		<a href="/" class="header__logo">
 			<svg>
 				<use href="@img/sprite.svg#logo"></use>
 			</svg>
