--- a/src/html/header.html
+++ b/src/html/header.html
@@ -22,7 +22,7 @@
 
 		<nav class="header__nav nav">
 			<ul>
-				<li><a href="#">Акции</a></li>
+				<li><a id="page-4" href="/price.html">Цены</a></li>
 				<li><a href="#">Отзывы</a></li>
 				<li><a href="#">Контакты</a></li>
 			</ul>
