--- a/src/team.html
+++ b/src/team.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
-@@include('html/head.html',{ "title":"Главная" })
+@@include('html/head.html',{ "title":"Мастера" })
 
 <body>
 	<main>
