--- a/src/html/header.html
+++ b/src/html/header.html
@@ -8,8 +8,8 @@
 
 		<nav class="header__nav nav">
 			<ul>
-				<li><a id="page-1" href="/">Главная</a></li>
-				<li><a id="page-2" href="/team.html">Мастера</a></li>
+				<li><a id="page-1" href="/DeloteBeauty">Главная</a></li>
+				<li><a id="page-2" href="/DeloteBeauty/team.html">Мастера</a></li>
 				<li><a id="page-3" href="#">Косметика</a></li>
 			</ul>
 		</nav>
@@ -22,7 +22,7 @@
 
 		<nav class="header__nav nav">
 			<ul>
-				<li><a id="page-4" href="/price.html">Цены</a></li>
+				<li><a id="page-4" href="/DeloteBeauty/price.html">Цены</a></li>
 				<li><a href="#">Отзывы</a></li>
 				<li><a href="#">Контакты</a></li>
 			</ul>
