--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="css/style.min.css?_v=20240825182229">
+	<link rel="stylesheet" href="css/style.min.css?_v=20240825183232">
 	<title>Главная</title>
 </head>
 
@@ -21,13 +21,13 @@
 
 		<nav class="header__nav nav">
 			<ul>
-				<li><a id="page-1" href="/">Главная</a></li>
-				<li><a id="page-2" href="/team.html">Мастера</a></li>
+				<li><a id="page-1" href="/DeloteBeauty">Главная</a></li>
+				<li><a id="page-2" href="/DeloteBeauty/team.html">Мастера</a></li>
 				<li><a id="page-3" href="#">Косметика</a></li>
 			</ul>
 		</nav>
 
-		<a href="/" class="header__logo">
+		<a href="/DeloteBeauty" class="header__logo">
 			<svg>
 				<use href="img/sprite.svg#logo"></use>
 			</svg>
@@ -35,7 +35,7 @@
 
 		<nav class="header__nav nav">
 			<ul>
-				<li><a id="page-4" href="/price.html">Цены</a></li>
+				<li><a id="page-4" href="/DeloteBeauty/price.html">Цены</a></li>
 				<li><a href="#">Отзывы</a></li>
 				<li><a href="#">Контакты</a></li>
 			</ul>
@@ -240,6 +240,6 @@
 	<p class="footer__copyright">Copyright © 2017 - 2022</p>
 </footer>
 </body>
-<script src="js/app.min.js?_v=20240825182229"></script>
+<script src="js/app.min.js?_v=20240825183232"></script>
 
 </html>
